Added single post functionality

--- a/src/posts/to-jest-czwarty-post/index.mdx
+++ b/src/posts/to-jest-czwarty-post/index.mdx
@@ -5,3 +5,12 @@ date: 2020-11-14
 image: "nightCologne.jpg"
 excerpt: Tutaj wstęp do czwartego postu na stronie".
 ---
+
+REACT PODSTAWY - #1 Renderowanie elementów na stronie i co było zanim powstał ReactJS
+
+React podstawy to seria, w której chcę uczyć się razem z wami. Postaram się swoimi słowami opisywać podstawowe zagadnienia związane z biblioteką ReactJS
+
+Facebook: https://www.facebook.com/Programistafrontend-108775494324661/
+www: https://www.programistafrontend.pl/
+Instagram: https://www.instagram.com/programistafrontend
+Email: daniel@programistafrontend.pl
